--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
         {
             "source": "/api/tweets",
             "destination": "http://107.175.36.39:3000/tweets"
+        },
+        {
+            "source": "/api/user/:username",
+            "destination": "http://107.175.36.39:3000/user/:username"
         }
     ]
 }
