--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,24 @@
             "source": "/api/user/:username",
             "destination": "http://107.175.36.39:3000/user/:username"
         }
+    ],
+    "headers": [
+        {
+            "source": "/api/(.*)",
+            "headers": [
+                {
+                    "key": "Access-Control-Allow-Origin",
+                    "value": "https://x.com"
+                },
+                {
+                    "key": "Access-Control-Allow-Methods",
+                    "value": "GET, POST, PUT, DELETE, OPTIONS"
+                },
+                {
+                    "key": "Access-Control-Allow-Headers",
+                    "value": "X-Requested-With, Content-Type, Accept"
+                }
+            ]
+        }
     ]
 }
