--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
             "headers": [
                 {
                     "key": "Access-Control-Allow-Origin",
-                    "value": "https://x.com"
+                    "value": "*"
                 },
                 {
                     "key": "Access-Control-Allow-Methods",
