refactor: Restrict CORS configuration to x.com domain
- Update Next.js and Vercel CORS headers to allow only x.com
- Add Access-Control-Allow-Credentials header
- Ensure more secure and specific cross-origin access control

--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
             "headers": [
                 {
                     "key": "Access-Control-Allow-Origin",
-                    "value": "*"
+                    "value": "https://x.com"
                 },
                 {
                     "key": "Access-Control-Allow-Methods",
@@ -24,6 +24,10 @@
                 {
                     "key": "Access-Control-Allow-Headers",
                     "value": "X-Requested-With, Content-Type, Accept"
+                },
+                {
+                    "key": "Access-Control-Allow-Credentials",
+                    "value": "true"
                 }
             ]
         }
